[WFLY-16988]:Remove xalan dependency